--- a/style.css
+++ b/style.css
@@ -116,7 +116,14 @@ section {
   font-weight: 700;
   color: transparent;
   /* -webkit-text-stroke: 0.7px var(--main-color); */
-  background-image: linear-gradient(90deg, #ff1b69, #ff0, #2196f3, #9c27b8, #ff1b69);
+  background-image: linear-gradient(
+    90deg,
+    #ff1b69,
+    #ff0,
+    #2196f3,
+    #9c27b8,
+    #ff1b69
+  );
   background-repeat: no-repeat;
   -webkit-background-clip: text;
   background-clip: text;
